// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChevronousText basic renders as expected 1`] = `
<ChevronAfterText
  text="Explore Mapbox"
/>
`;

exports[`ChevronousText chevron before multiline text renders as expected 1`] = `
<ChevronBeforeText
  text="\\"It was the best of times, it was the worst of times, it was the age of wisdom, it was the age of foolishness, it was the epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of Darkness, it was the spring of hope, it was the winter of despair, we had everything before us, we had nothing before us...\\" - A Tale of Two Cities"
/>
`;

exports[`ChevronousText chevron before one long unwrappable word text renders as expected 1`] = `
<ChevronBeforeText
  text="Lopadotemachoselachogaleokranioleipsanodrimhypotrimmatosilphioparaomelitokatakechymenokichlepikossyphophattoperisteralektryonoptekephalliokigklopeleiolagoiosiraiobaphetraganopterygon"
/>
`;

exports[`ChevronousText multiline text renders as expected 1`] = `
<ChevronAfterText
  text="\\"It was the best of times, it was the worst of times, it was the age of wisdom, it was the age of foolishness, it was the epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of Darkness, it was the spring of hope, it was the winter of despair, we had everything before us, we had nothing before us...\\" - A Tale of Two Cities"
/>
`;

exports[`ChevronousText one long unwrappable word text renders as expected 1`] = `
<ChevronAfterText
  text="Pneumonoultramicroscopicsilicovolcanoconiosis"
/>
`;
